--- a/project/AirBnB.ipynb
+++ b/project/AirBnB.ipynb
@@ -9,13 +9,13 @@
     "# Group Project AirBnB\n",
     "**Useful links**\n",
     "\n",
-    "<a href=\"https://github.com/ShimantoRahman/aCRM-Group-Project-AirBnB\"><img src=\"./assets/github_logo.png\" style=\"width:120px; margin: 0 40px 40px 40px;\"></a>\n",
+    "<a href=\"https://github.com/ShimantoRahman/aCRM-Group-Project-AirBnB\"><img src=\"./assets/github_logo.png\" style=\"width:120px; margin: 0 0 40px 40px;\"></a>\n",
     "\n",
     "> [Inside AirBnB: New York](http://insideairbnb.com/new-york-city/?fbclid=IwAR3lvDyNFboZqns1jNJ8v4OzqzG8sLFsqeSlRjqb_-tyvk4iM_XRSYdwmEQ)\n",
     "\n",
     "> [Airbnb Rental Listings Dataset Mining](https://towardsdatascience.com/airbnb-rental-listings-dataset-mining-f972ed08ddec)\n",
     "\n",
-    "## 1. Setup\n",
+    "## 1 Setup\n",
     "### 1.1 Import modules"
    ]
   },
@@ -27,7 +27,12 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import nltk\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "# nltk.download('punkt')\n",
+    "# nltk.download('stopwords')"
    ]
   },
   {
@@ -261,7 +266,7 @@
    "source": [
     "# dates\n",
     "def column_to_date(df, column):\n",
-    "    column = pd.to_datetime(column, format=\"%Y-%m-%d\")\n",
+    "    df[column] = pd.to_datetime(df[column], format=\"%Y-%m-%d\")\n",
     "    \n",
     "# listings_summary\n",
     "column_to_date(listings_summary, \"last_review\")\n",
@@ -288,35 +293,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "listings_detail.host_response_rate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "listings_detail.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# change t/f columns to 1/0\n",
-    "# important to check missing values first else missing values will be replaced with 0\n",
-    "def replace_wrong_values(column_obs):\n",
-    "    if column_obs == \"t\":\n",
-    "        return(1)\n",
-    "    else:\n",
-    "        return(0)\n",
+    "label_encoder = LabelEncoder()\n",
     "\n",
     "def column_to_bool(df, column):\n",
-    "    df[column] = df[column].apply(replace_wrong_values)\n",
-    "    df[column] = pd.to_numeric(df[column])\n",
+    "    label_encoder.fit(df[column])\n",
+    "    new_column = column + \"_num\"\n",
+    "    df[new_column] = label_encoder.transform(df[column])\n",
     "\n",
     "column_to_bool(listings_detail, \"instant_bookable\")\n",
     "column_to_bool(listings_detail, \"requires_license\")\n",
@@ -324,15 +307,9 @@
     "column_to_bool(listings_detail, \"require_guest_profile_picture\")\n",
     "column_to_bool(listings_detail, \"require_guest_phone_verification\")\n",
     "column_to_bool(listings_detail, \"instant_bookable\")\n",
-    "column_to_bool(listings_detail, \"host_is_superhost\")\n",
-    "column_to_bool(listings_detail, \"has_availability\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **CODE DOES NOT WORK**"
+    "# column_to_bool(listings_detail, \"host_is_superhost\")\n",
+    "column_to_bool(listings_detail, \"has_availability\")\n",
+    "listings_detail[[\"requires_license\", \"requires_license_num\"]].head()"
    ]
   },
   {
@@ -341,32 +318,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CODE DOES NOT WORK\n",
+    "# changing price from $00.0 [String] to 00.0 float \n",
     "\n",
-    "def replace_wrong_values(column_obs):\n",
-    "    if not column_obs.isna():\n",
-    "        print(column_obs)\n",
-    "        h = str(column_obs)\n",
-    "        s = h[:-1]\n",
-    "        f = float(s)\n",
-    "        v = f / 100\n",
-    "        k = str(v)\n",
-    "        \n",
-    "        return(column_obs)\n",
-    "    else:\n",
-    "        return(None)\n",
-    "\n",
-    "def column_to_float(df, column):\n",
-    "    df[column] = df[column].apply(replace_wrong_values)\n",
-    "    df[column] = pd.to_numeric(df[column])\n",
-    "    \n",
-    "    \n",
-    "column_to_float(listings_detail, \"host_response_rate\")\n",
-    "# listings_detail.host_response_rate.dtype\n",
-    "    \n",
-    "# host_response_rate\n",
-    "# s = \"100%\"\n",
-    "# str(float(s[:-1]) / 100)\n"
+    "calendar_detail[\"price\"] = calendar_detail[\"price\"].str.replace(\"$\", \"\")\n",
+    "calendar_detail[\"price\"] = calendar_detail[\"price\"].str.replace(\",\", \"\")\n",
+    "calendar_detail[\"price\"] = pd.to_numeric(calendar_detail[\"price\"])"
    ]
   },
   {
@@ -390,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(listings_summary.groupby(\"neighbourhood_group\").mean()[\"price\"])"
+    "print(listings_summary.groupby(\"neighbourhood\").mean()[\"price\"])"
    ]
   },
   {
@@ -405,7 +361,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "calendar_detail[[\"date\", \"price\"]].groupby(\"date\").mean().plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -419,7 +377,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# joining listings_summary with calendar_detail\n",
+    "temp = listings_summary[[\"id\", \"neighbourhood\"]].rename(columns = {\"id\": \"listing_id\"})\n",
+    "cal_listing = pd.merge(calendar_detail, temp, how=\"inner\", on=\"listing_id\")\n",
+    "cal_listing.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculating variance per neighbourhood and requesting top one\n",
+    "price_by_neighbourhood = cal_listing[[\"neighbourhood\", \"price\"]].groupby(\"neighbourhood\").var()\n",
+    "price_by_neighbourhood.sort_values(by = \"price\", ascending = False).head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plotting the prices of the neighbourhood with the largest price fluctuations\n",
+    "cal_listing[[\"date\", \"price\", \"neighbourhood\"]][cal_listing[\"neighbourhood\"] == \"Randall Manor\"].groupby(\"date\").mean().plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -495,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.9\tCreate a timeline and plot for each year the highest, Q1, the median, Q3 and lowest price on one graph. Do this for each neighborhood group as well as for the entire city. Determine which neighborhood group stands out the most and create a comparative graph of this neighborhood with all other groups."
+    "### 2.9\tCreate a timeline and plot for each month the highest, Q1, the median, Q3 and lowest price on one graph. Do this for each neighborhood group as well as for the entire city. Determine which neighborhood group stands out the most and create a comparative graph of this neighborhood with all other groups."
    ]
   },
   {
@@ -545,7 +529,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# subset of hosts with multiple locations\n",
+    "ids = listings_summary[\"host_id\"]\n",
+    "subset = listings_summary[ids.isin(ids[ids.duplicated()])].sort_values(by=\"host_id\")\n",
+    "\n",
+    "# count hosts with different locations and hosts with only 1 location\n",
+    "more_than_one_loc = 0\n",
+    "just_one_loc = 0\n",
+    "for i in ids[ids.duplicated()]:\n",
+    "    if len(subset[subset[\"host_id\"] == i][\"neighbourhood\"].unique()) > 1:\n",
+    "        more_than_one_loc += 1\n",
+    "    else:\n",
+    "        just_one_loc += 1\n",
+    "        \n",
+    "print(\"more than one location: %s\" %more_than_one_loc) # 1201\n",
+    "print(\"just one location: %s\" %just_one_loc) # 6008"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bar chart of counts\n"
+   ]
   },
   {
    "cell_type": "markdown",
